Add more images for the private build.

--- a/tex/p122.tex
+++ b/tex/p122.tex
@@ -53,6 +53,7 @@
 \vs p122 7:8 Joseph had thought to go out at once and enrol, but Mary was weary; she was considerably distressed and besought him to remain by her side, which he did.
 \usection{8.\bibnobreakspace The Birth of Jesus}
 \vs p122 8:1 All that night Mary was restless so that neither of them slept much. By the break of day the pangs of childbirth were well in evidence, and at noon, August 21, 7\,B.C., with the help and kind ministrations of women fellow travellers, Mary was delivered of a male child. Jesus of Nazareth was born into the world, was wrapped in the clothes which Mary had brought along for such a possible contingency, and laid in a near\hyp{}by manger.
+\tunemarkup{private}{\begin{center}\includegraphics[scale=\tunemarkup{pgkoboaurahd}{0.52}\tunemarkup{pghanlin}{0.46}\tunemarkup{pgnexus7}{0.45}\tunemarkup{pgkindledx}{0.36}]{../urantia-pictures/Son-of-Man-Son-of-God.jpg}\end{center}}
 \vs p122 8:2 In just the same manner as all babies before that day and since have come into the world, the promised child was born; and on the eighth day, according to the Jewish practice, he was circumcised and formally named Joshua (Jesus).
 \vs p122 8:3 The next day after the birth of Jesus, Joseph made his enrolment. Meeting a man they had talked with two nights previously at Jericho, Joseph was taken by him to a well\hyp{}to\hyp{}do friend who had a room at the inn, and who said he would gladly exchange quarters with the Nazareth couple. That afternoon they moved up to the inn, where they lived for almost three weeks until they found lodgings in the home of a distant relative of Joseph.
 \vs p122 8:4 The second day after the birth of Jesus, Mary sent word to Elizabeth that her child had come and received word in return inviting Joseph up to Jerusalem to talk over all their affairs with Zacharias. The following week Joseph went to Jerusalem to confer with Zacharias. Both Zacharias and Elizabeth had become possessed with the sincere conviction that Jesus was indeed to become the Jewish deliverer, the Messiah, and that their son John was to be his chief of aides, his right\hyp{}hand man of destiny. And since Mary held these same ideas, it was not difficult to prevail upon Joseph to remain in Bethlehem, the City of David, so that Jesus might grow up to become the successor of David on the throne of all Israel. Accordingly, they remained in Bethlehem more than a year, Joseph meantime working some at his carpenter’s trade.
