--- a/tex/p134.tex
+++ b/tex/p134.tex
@@ -12,6 +12,7 @@
 \vs p134 1:7 This was one of the more unusual years in the inner experience of the Son of Man; great progress was made in effecting working harmony between his human mind and the indwelling Adjuster. The Adjuster had been actively engaged in reorganizing the thinking and in rehearsing the mind for the great events which were in the not then distant future. The personality of Jesus was preparing for his great change in attitude toward the world. These were the in\hyp{}between times, the transition stage of that being who began life as God appearing as man, and who was now making ready to complete his earth career as man appearing as God.
 \usection{2.\bibnobreakspace The Caravan Trip to the Caspian}
 \vs p134 2:1 It was the first of April, A.D.\,24, when Jesus left Nazareth on the caravan trip to the Caspian Sea region. The caravan which Jesus joined as its conductor was going from Jerusalem by way of Damascus and Lake Urmia through Assyria, Media, and Parthia to the south\hyp{}eastern Caspian Sea region. It was a full year before he returned from this journey.
+\tunemarkup{private}{\begin{center}\includegraphics[scale=\tunemarkup{pgkoboaurahd}{0.52}\tunemarkup{pghanlin}{0.46}\tunemarkup{pgnexus7}{0.46}\tunemarkup{pgkindledx}{0.35}]{../urantia-pictures/The_caravan_conductor.jpg}\end{center}}
 \vs p134 2:2 For Jesus this caravan trip was another adventure of exploration and personal ministry. He had an interesting experience with his caravan family --- passengers, guards, and camel drivers. Scores of men, women, and children residing along the route followed by the caravan lived richer lives as a result of their contact with Jesus, to them, the extraordinary conductor of a commonplace caravan. Not all who enjoyed these occasions of his personal ministry profited thereby, but the vast majority of those who met and talked with him were made better for the remainder of their natural lives.
 \vs p134 2:3 Of all his world travels this Caspian Sea trip carried Jesus nearest to the Orient and enabled him to gain a better understanding of the Far\hyp{}Eastern peoples. He made intimate and personal contact with every one of the surviving races of Urantia excepting the red. He equally enjoyed his personal ministry to each of these varied races and blended peoples, and all of them were receptive to the living truth which he brought them. The Europeans from the Far West and the Asiatics from the Far East alike gave attention to his words of hope and eternal life and were equally influenced by the life of loving service and spiritual ministry which he so graciously lived among them.
 \vs p134 2:4 \pc The caravan trip was successful in every way. This was a most interesting episode in the human life of Jesus, for he functioned during this year in an executive capacity, being responsible for the material intrusted to his charge and for the safe conduct of the travellers making up the caravan party. And he most faithfully, efficiently, and wisely discharged his multiple duties.
@@ -87,6 +88,7 @@
 \vs p134 8:4 Jesus spent the last three weeks of August and the first three weeks of September on Mount Hermon. During these weeks he finished the mortal task of achieving the circles of mind\hyp{}understanding and personality\hyp{}control. Throughout this period of communion with his heavenly Father the indwelling Adjuster also completed the assigned services. The mortal goal of this earth creature was there attained. Only the final phase of mind and Adjuster attunement remained to be consummated.
 \vs p134 8:5 After more than five weeks of unbroken communion with his Paradise Father, Jesus became absolutely assured of his nature and of the certainty of his triumph over the material levels of time\hyp{}space personality manifestation. He fully believed in, and did not hesitate to assert, the ascendancy of his divine nature over his human nature.
 \vs p134 8:6 \pc Near the end of the mountain sojourn Jesus asked his Father if he might be permitted to hold conference with his Satania enemies as the Son of Man, as Joshua ben Joseph. This request was granted. During the last week on Mount Hermon the great temptation, the universe trial, occurred. Satan (representing Lucifer) and the rebellious Planetary Prince, Caligastia, were present with Jesus and were made fully visible to him. And this “temptation,” this final trial of human loyalty in the face of the misrepresentations of rebel personalities, had not to do with food, temple pinnacles, or presumptuous acts. It had not to do with the kingdoms of this world but with the sovereignty of a mighty and glorious universe. The symbolism of your records was intended for the backward ages of the world’s childlike thought. And subsequent generations should understand what a great struggle the Son of Man passed through that eventful day on Mount Hermon.
+\tunemarkup{private}{\begin{center}\includegraphics[scale=\tunemarkup{pgkoboaurahd}{0.53}\tunemarkup{pghanlin}{0.46}\tunemarkup{pgnexus7}{0.46}\tunemarkup{pgkindledx}{0.35}]{../urantia-pictures/Not_by_Bread_Alone.jpg}\end{center}}
 \vs p134 8:7 To the many proposals and counterproposals of the emissaries of Lucifer, Jesus only made reply: \textcolour{ubdarkred}{“May the will of my Paradise Father prevail, and you, my rebellious son, may the Ancients of Days judge you divinely. I am your Creator\hyp{}father; I can hardly judge you justly, and my mercy you have already spurned. I commit you to the adjudication of the Judges of a greater universe.”}
 \vs p134 8:8 To all the Lucifer\hyp{}suggested compromises and makeshifts, to all such specious proposals about the incarnation bestowal, Jesus only made reply, \textcolour{ubdarkred}{“The will of my Father in Paradise be done.”} And when the trying ordeal was finished, the detached guardian seraphim returned to Jesus’ side and ministered to him.
 \vs p134 8:9 \pc On an afternoon in late summer, amid the trees and in the silence of nature, Michael of Nebadon won the unquestioned sovereignty of his universe. On that day he completed the task set for Creator Sons to live to the full the incarnated life in the likeness of mortal flesh on the evolutionary worlds of time and space. The universe announcement of this momentous achievement was not made until the day of his baptism, months afterwards, but it all really took place that day on the mountain. And when Jesus came down from his sojourn on Mount Hermon, the Lucifer rebellion in Satania and the Caligastia secession on Urantia were virtually settled. Jesus had paid the last price required of him to attain the sovereignty of his universe, which in itself regulates the status of all rebels and determines that all such future upheavals (if they ever occur) may be dealt with summarily and effectively. Accordingly, it may be seen that the so\hyp{}called “great temptation” of Jesus took place sometime before his baptism and not just after that event.\fnc{\ldots{}the so-called “great temptation” of Jesus took place \bibtextul{some time} before his baptism\ldots{} \bibexpl{Closed form “sometime”. See note for \bibref[60:3.20]{p0607 3:20}. “Sometime before Michael’s death in the flesh the fallen Lucifer’s associate,\ldots{}”}}
